# c_playground

./: .gitignore  CMakeLists.txt  CMakePresets.json
scripts/: build.bat  clean.bat  run_tests.bat  vs2022.bat
src/: main.c
tests/: main_test.cpp
